--- a/staff_management.html
+++ b/staff_management.html
@@ -396,13 +396,18 @@
                             <label for="profilePicture" class="form-label">Profile Picture</label>
                             <input type="file" class="form-control" id="profilePicture" name="profilePicture" accept="image/*" >
                         </div>
-                    <button type="submit" class="btn btn-primary w-100">Save Changes</button>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Save Changes</button>
+                        </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
 </div>
+
+
 </div>
 </div>
 </div></div></div><br><br><br>
