--- a/extra-curriculum-assessment.html
+++ b/extra-curriculum-assessment.html
@@ -86,7 +86,7 @@
                     <option value="2026/2027">2026/2027</option>
                 </select>
             </div>
-            <button id="loadStudentsBtn" class="btn btn-secondary btn-block">Load Students</button>
+            <button id="loadStudentsBtn" class="btn btn-success btn-block">Load Students</button>
         </div>
         <!-- Student List and Assessments -->
         <div id="studentList" style="display: none;">
