--- a/staff_management.html
+++ b/staff_management.html
@@ -187,6 +187,14 @@
                         </select>
                     </div>
                     <div class="form-group">
+                        <label for="gender">Gender</label>
+                        <select class="form-select" id="gender" name="gender">
+                          <option value="" disabled selected>Select Gender</option>
+                          <option value="Male">Male</option>
+                          <option value="Female">Female</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label for="subjects">Subjects</label>
                         <div><small class="text-muted">Please select all the subjects you are currently teaching by checking the boxes below.</small></div>
 
