--- a/overview.html
+++ b/overview.html
@@ -163,37 +163,42 @@
     </div>
 </div>
     </main>
-
-    <!-- Footer Section -->
-    <footer class="footer">
-        <div class="row">
-            <div class="col-md-3">
-                <p>Professor Ibeawuchi Amagwu Francis</p>
-                <p>Email: Frank.Amagwu@gmail.com</p>
-                <p>Phone: +234 803 328 4372</p>
-            </div>
-            <div class="col-md-3">
-                <p>Micro and Development Finance</p>
-                <p>National Open University of Nigeria</p>
-                <a href="https://www.facebook.com/prof.johndoe" target="_blank">
-                    <i class="fab fa-facebook"></i> Facebook
-                </a>
-            </div>
-            <div class="col-md-3 text-center">
-                <p>&copy; 2024 Professor Ibeawuchi Amagwu</p>
-                <p>All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Back to top button -->
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
-
-    <!-- Bootstrap and jQuery Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
-    <!-- Admin Dashboard JS -->
+ <!-- Footer -->
+ <div class="footer bg-light mt-5">
+    <div class="row text-center py-3">
+      <div class="col-md-4">
+        <p><strong>Imam Hafsin Model International School</strong></p>
+        <p>622, Yakasai Street, Tal'udu G/Kaya</p>
+        <p>Email: imamhafsin@gmail.com</p>
+        <p>Phone: 08030999939939399</p>
+      </div>
+      <div class="col-md-4">
+        <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
+          <i class="fab fa-facebook"></i> Facebook
+        </a>
+        <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
+          <i class="fab fa-instagram"></i> Instagram
+        </a>
+        <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
+          <i class="fab fa-twitter"></i> Twitter
+        </a>
+        <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
+          <i class="fab fa-whatsapp"></i> WhatsApp
+        </a>
+      </div>
+      <div class="col-md-4">
+        <p>&copy; IHMIS 2024</p>
+        <p>All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+  <!-- Back to top button -->
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+  
+  <!-- Scripts -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="report.js"></script>
 </body>
 
