--- a/overview.html
+++ b/overview.html
@@ -67,7 +67,7 @@
     <!-- Main Content Section -->
     <main>
         <!-- Admin Dashboard Stats Section -->
-        <div id="stats" class="container mt-4">
+        <div id="stats" class="container mt-4 bg-white">
             <h2 class="text-center">Report Control Panel</h2>
             <div class="row stats-container">
                 <!-- Student Count -->
