--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
     <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
     <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+    <!--RC:1320997-->
   </nav>
   
   <!-- Second Navbar -->
@@ -67,7 +68,7 @@
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
                 <h5 class="text-info">Western Education Section</h5>
                 <p class="text-light bg-transparent px-3 py-2">
-                    Empowering students with modern education and life skills under the guidance of Mrs. Amina.
+                    Empowering students with modern education and life skills under the guidance of Mr. Muhammad Auwal 
                 </p>
             </div>
         </div>
@@ -77,7 +78,7 @@
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
                 <h5 class="text-info">Islamiyya Section</h5>
                 <p class="text-light bg-transparent px-3 py-2">
-                    Building a strong foundation in Islamic studies under the guidance of Mal. Usman.
+                    Building a strong foundation in Islamic studies under the guidance of Mal. Usman Said
                 </p>
             </div>
         </div>
@@ -87,7 +88,7 @@
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
                 <h5 class="text-info">Tahfizz Section</h5>
                 <p class="text-light bg-transparent px-3 py-2">
-                    Focusing on the memorization of the Holy Quran with leadership from Mal. Salihu.
+                    Focusing on the memorization of the Holy Quran with leadership from Mal. Salihu Hashim
                 </p>
             </div>
         </div>
@@ -102,29 +103,29 @@
         <div class="row text-center">
             <div class="col-md-4">
                 <img src="auwal1.jfif" alt="Mr. Auwal Muhammad" class="director-img">
-                <h5>Mr. Auwal Muhammad</h5>
+                <h5>Mr. Muhammad Auwal </h5>
                 <p>Director, Western Education Section</p>
             </div>
             <div class="col-md-4">
                 <img src="shamsu.jpg" alt="Mal. Usman" class="director-img">
-                <h5>Mal. Usman</h5>
+                <h5>Mal. Usman Said</h5>
                 <p>Director, Islamiyya Section</p>
             </div>
             <div class="col-md-4">
                 <img src="passport.jpg" alt="Mal. Salihu" class="director-img">
-                <h5>Mal. Salihu</h5>
+                <h5>Mal. Salihu Hashim</h5>
                 <p>Director, Tahfizz Section</p>
             </div>
         </div>
     </div>
 
     <!-- News and Feeds -->
-    <div class="news-section mt-5">
-        <h3 class="text-center text-info bg-light ">News and Feeds</h3>
+    <div class="news-section text-center mt-5">
+        <h3 class=" text-info bg-light ">News and Feeds</h3>
         <ul>
-            <li>Upcoming PTA meeting scheduled for December 15th.</li>
+            <li class="bg-light">Upcoming PTA meeting scheduled for December 15 January, 2025.</li>
             <li>Congratulations to our Tahfizz students on completing their Quran memorization.</li>
-            <li>Western Education Section announces the opening of new science labs.</li>
+            <li class="bg-light">Western Education Section announces the opening of new science labs.</li>
         </ul>
     </div>
 <!-- Footer -->
@@ -132,9 +133,9 @@
     <div class="row text-center py-3">
       <div class="col-md-4">
         <p><strong>Imam Hafsin Model International School</strong></p>
-        <p>622, Yakasai Street, Tal'udu G/Kaya</p>
+        <p>No.60 Sani Yakasai Street</p><p>Tal'udu G/Kaya  Gwale LGA </p>  <p>Kano State.</p>
         <p>Email: imamhafsin@gmail.com</p>
-        <p>Phone: 08030999939939399</p>
+        <p>Phone: 08142458654</p>
       </div>
       <div class="col-md-4">
         <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
@@ -151,7 +152,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <p>&copy; IHMIS 2024</p>
+        <p>&copy; SAFS Technologies 2025</p>
         <p>All rights reserved.</p>
       </div>
     </div>
