--- a/index.html
+++ b/index.html
@@ -131,12 +131,20 @@
 <!-- Footer -->
 <div class="footer bg-light mt-5">
     <div class="row text-center py-3">
-      <div class="col-md-4">
-        <p><strong>Imam Hafsin Model International School</strong></p>
-        <p>No.60 Sani Yakasai Street</p><p>Tal'udu G/Kaya  Gwale LGA </p>  <p>Kano State.</p>
-        <p>Email: imamhafsin@gmail.com</p>
-        <p>Phone: 08142458654</p>
-      </div>
+        <div class="col-md-4">
+            <p><strong>Imam Hafsin Model International School</strong></p>
+            <p>No.60 Sani Yakasai Street</p>
+            <p>Tal'udu G/Kaya, Gwale LGA</p>
+            <p>Kano State</p>
+            <p>
+              <i class="fas fa-envelope"></i> 
+              <a href="mailto:imamhafsin@gmail.com">imamhafsin@gmail.com</a>
+            </p>
+            <p>
+              <i class="fas fa-phone"></i> 
+              <a href="tel:08142458654">08142458654</a>
+            </p>
+          </div>
       <div class="col-md-4">
         <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
           <i class="fab fa-facebook"></i> Facebook
