--- a/about.html
+++ b/about.html
@@ -47,156 +47,135 @@
     </div>
   </nav>
    
-    <!-- Hero Section -->
-    <div class="hero-section">
-        <h1>Imam Hafsin Model International School</h1>
-    </div>
+  <!-- Hero Section -->
+  <div class="hero-section text-center py-5 bg-primary text-white">
+    <h1>Imam Hafsin Model International School</h1>
+    <p>Where Knowledge Meets Excellence</p>
+  </div>
 
-    <!-- History of the School -->
-    <div class="history-container text-center my-3">
-        <h2 class="section-title">Our History</h2>
-        <p>
-            Imam Hafsin Model International School was established in 1995 with the aim of providing holistic education 
-            that combines modern academic excellence with Islamic teachings. Starting as a small institution with only 50 students, 
-            the school has grown into a well-respected educational center, offering three distinct sections: Western Education, Islamiyya, and Tahfizz.
-        </p>
-        <p>
-            Over the years, the school has maintained its commitment to nurturing responsible and knowledgeable individuals who excel in both academic and moral spheres. 
-            It has received numerous awards for its outstanding contributions to education and remains a beacon of quality learning in the region.
-        </p>
-    </div>
+  <!-- History of the School -->
+  <div class="container my-5">
+    <h2 class="section-title text-center">Our History</h2>
+    <p class="text-justify">
+      <strong>Imam Hafsin Model International School</strong> is a private, registered institution certified by the Ministry of Education, Kano State. Established in 2014, the school also holds accreditation from the Nigerian Corporate Affairs Commission <strong>(CAC)</strong> and is registered for <strong>WAEC</strong> and <strong>NECO</strong>. The student population has grown from 20 in 2014 to over 307 today. Our school comprises three departments:
+    </p>
+    <ul>
+      <li><strong>Tahfeez Section</strong></li>
+      <li><strong>Islamiyya and Arabic Department</strong></li>
+      <li><strong>Western Education Department</strong>: Offering both Science and Arts education.</li>
+    </ul>
+  </div>
 
-    <!-- Leadership Section -->
-    <div class="leader-container my-2">
-        <h2 class="section-title">Meet Our Leadership</h2>
-        <div class="row text-center">
-              <!-- Director of Western Education -->
-            <div class="col-md-4">
-                <img src="auwal1.jfif" alt="Director of Western Education" class="profile-pic">
-                <h5>Mrs. Amina Ibrahim</h5>
-                <p>Director of Western Education</p>
-                <p>
-                    Mr. Auwal Muhammad is an experienced educator with a Master's degree in Education. He has been instrumental in 
-                    developing the school's curriculum and ensuring students achieve academic excellence.
-                </p>
-            </div>
-            <div class="col-md-4">
-                <img src="shamsu.jpg" alt="Founder" class="profile-pic">
-                <h5>Mal. Salihu Haruna</h5>
-                <p>Director of Tahfizz Section</p>
-                <p>
-                    An expert in Quranic memorization, Mal. Salihu leads the Tahfizz section with dedication, producing numerous 
-                    hafiz who excel in their understanding of the Quran.
-                </p>
-            </div>
-        
-            <!-- Director of Islamiyya -->
-            <div class="col-md-4">
-                <img src="passport.jpg" alt="Director of Islamiyya" class="profile-pic">
-                <h5>Mal. Usman Abdullahi</h5>
-                <p>Director of Islamiyya Section</p>
-                <p>
-                    Mal. Usman has dedicated his life to teaching Islamic studies. His guidance has helped students gain a deeper 
-                    understanding of Islamic principles and practices.
-                </p>
-            </div>
+  <!-- Leadership Section -->
+  <div class="container-fluid my- bg-light">
+    <h2 class="section-title text-center">Meet Our Leadership</h2>
+    <div class="row text-center">
+      <div class="col-md-4">
+        <img src="auwal1.jfif" alt="Director of Western Education" class="profile-pic rounded-circle">
+        <h5>Mal Auwal Muhammad</h5>
+        <p>Director of Western Education</p>
+        <p>Mr. Auwal is an experienced educator with a Master's degree in Education, dedicated to academic excellence.</p>
+      </div>
+      <div class="col-md-4">
+        <img src="passport.jpg" alt="Director of Tahfeez Section" class="profile-pic rounded-circle">
+        <h5>Mal Salihu Hashim</h5>
+        <p>Director of Tahfeez Section</p>
+        <p>Expert in Quranic memorization, Mal Salihu has trained numerous Hafiz excelling in their studies.</p>
+      </div>
+      <div class="col-md-4">
+        <img src="shamsu.jpg" alt="Director of Islamiyya Section" class="profile-pic rounded-circle">
+        <h5>Mal Usman Said Isa</h5>
+        <p>Director of Islamiyya Section</p>
+        <p>Dedicated to Islamic education, Mal Usman fosters a deep understanding of Islamic principles.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Achievements Section -->
+  <div class="container my-5 text-center">
+    <h2 class="section-title">Our Achievements</h2>
+    <ul class="list-unstyled">
+      <li>Recognized as "Best School in Academic Excellence" by the Regional Education Board in 2020.</li>
+      <li>Graduated over 100 students excelling in fields such as engineering, medicine, and Islamic scholarship.</li>
+      <li>Hosted inter-school Quranic recitation competitions, fostering unity among students.</li>
+    </ul>
+  </div>
+
+  <!-- Testimonials Section -->
+  <div class="container my-5 bg-light">
+    <h2 class="section-title text-center">What People Say</h2>
+    <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <blockquote class="blockquote text-center">
+            <img src="passport.jpg" alt="Parent" class="rounded-circle mb-3" style="width: 120px; height: 120px;">
+            <p class="mb-0">"Imam Hafsin Model International School is where my child has excelled academically and spiritually."</p>
+            <footer class="blockquote-footer">Parent of a Student</footer>
+          </blockquote>
         </div>
-    </div>
-
-    <!-- School Achievements Section -->
-    <div class="achievements-container text-center my-2">
-        <h2 class="section-title">Our Achievements</h2>
-        <ul>
-            <li>Recognized as the "Best School in Academic Excellence" in 2020 by the Regional Education Board.</li>
-            <li>Produced over 500 graduates who have excelled in various fields including engineering, medicine, and Islamic scholarship.</li>
-            <li>Hosted inter-school Quranic recitation competitions, fostering unity and collaboration among students.</li>
-        </ul>
-    </div>
-
-<!-- Testimonials Section -->
-<div class="container my-5">
-    <h2 class="section-title">What People Say</h2>
-    <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="7000">
-        <div class="carousel-inner">
-            <!-- Testimonial 1 -->
-            <div class="carousel-item active">
-                <div class="text-center">
-                    <img src="shamsu.jpg" alt="Parent" class="rounded-circle" style="width: 160px; height: 160px; object-fit: cover; object-position: top 15%;">
-                    <blockquote class="blockquote mt-3">
-                        <p class="mb-0">
-                            "Imam Hafsin Model International School is a place where my child has not only excelled academically but also grown spiritually."
-                        </p>
-                        <footer class="blockquote-footer mt-2">Parent of a Student</footer>
-                    </blockquote>
-                </div>
-            </div>
-            <!-- Testimonial 2 -->
-            <div class="carousel-item">
-                <div class="text-center">
-                    <img src="passport.jpg" alt="Former Student" class="rounded-circle" style="width: 160px; height: 160px; object-fit: cover; object-position: top 15%;">
-                    <blockquote class="blockquote mt-3">
-                        <p class="mb-0">
-                            "The teachers are highly skilled, and the environment is conducive for learning."
-                        </p>
-                        <footer class="blockquote-footer mt-2">Former Student</footer>
-                    </blockquote>
-                </div>
-            </div>
-            <!-- Testimonial 3 -->
-            <div class="carousel-item">
-                <div class="text-center">
-                    <img src="former.jpeg" alt="Community Member" class="rounded-circle" style="width: 160px; height: 160px; object-fit: cover; object-position: top 15%;">
-                    <blockquote class="blockquote mt-3">
-                        <p class="mb-0">
-                            "The school's integration of Islamic and Western education is commendable. A truly unique institution!"
-                        </p>
-                        <footer class="blockquote-footer mt-2">Community Member</footer>
-                    </blockquote>
-                </div>
-            </div>
+        <div class="carousel-item">
+          <blockquote class="blockquote text-center">
+            <img src="shamsu.jpg" alt="Former Student" class="rounded-circle mb-3" style="width: 120px; height: 120px;">
+            <p class="mb-0">"The teachers are highly skilled, and the environment is conducive for learning."</p>
+            <footer class="blockquote-footer">Former Student</footer>
+          </blockquote>
         </div>
-    </div>
-</div>
-
-    <!-- Footer -->
-    <div class="footer bg-light mt-5">
-        <div class="row text-center py-3">
-            <div class="col-md-4">
-                <p><strong>Imam Hafsin Model International School</strong></p>
-                <p>622, Yakasai Street, Tal'udu G/Kaya</p>
-                <p>Email: imamhafsin@gmail.com</p>
-                <p>Phone: 08030999939939399</p>
-            </div>
-            <div class="col-md-4">
-                <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-facebook"></i> Facebook
-                </a>
-                <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-instagram"></i> Instagram
-                </a>
-                <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-twitter"></i> Twitter
-                </a>
-                <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-whatsapp"></i> WhatsApp
-                </a>
-            </div>
-            <div class="col-md-4">
-                <p>&copy; IHMIS 2024</p>
-                <p>All rights reserved.</p>
-            </div>
+        <div class="carousel-item">
+          <blockquote class="blockquote text-center">
+            <img src="passport.jpg" alt="Community Member" class="rounded-circle mb-3" style="width: 120px; height: 120px;">
+            <p class="mb-0">"The school's integration of Islamic and Western education is truly commendable."</p>
+            <footer class="blockquote-footer">Community Member</footer>
+          </blockquote>
         </div>
+      </div>
     </div>
-<!-- Back to top button -->
-<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
- <!-- Scripts -->
- <script src="login.js"></script>
- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
- </body>
- </html>
- 
+  </div>
+<!-- Footer -->
+<div class="footer bg-light mt-5">
+    <div class="row text-center py-3">
+        <div class="col-md-4">
+            <p><strong>Imam Hafsin Model International School</strong></p>
+            <p>No.60 Sani Yakasai Street</p>
+            <p>Tal'udu G/Kaya, Gwale LGA</p>
+            <p>Kano State</p>
+            <p>
+              <i class="fas fa-envelope"></i> 
+              <a href="mailto:imamhafsin@gmail.com">imamhafsin@gmail.com</a>
+            </p>
+            <p>
+              <i class="fas fa-phone"></i> 
+              <a href="tel:08142458654">08142458654</a>
+            </p>
+          </div>
+      <div class="col-md-4">
+        <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
+          <i class="fab fa-facebook"></i> Facebook
+        </a>
+        <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
+          <i class="fab fa-instagram"></i> Instagram
+        </a>
+        <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
+          <i class="fab fa-twitter"></i> Twitter
+        </a>
+        <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
+          <i class="fab fa-whatsapp"></i> WhatsApp
+        </a>
+      </div>
+      <div class="col-md-4">
+        <p>&copy; IHMIS & SAFS Technologies 2025</p>
+        <p>All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+  <!-- Back to top button -->
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+  
+  <!-- Scripts -->
+  <script src="login.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+  </html>
+  
