--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <p>&copy; SAFS Technologies 2025</p>
+        <p>&copy; IHMIS & SAFS Technologies 2025</p>
         <p>All rights reserved.</p>
       </div>
     </div>
