--- a/contact.html
+++ b/contact.html
@@ -56,30 +56,37 @@
     <div class="contact-container my-4">
         <div class="row">
             <!-- Map and Address Section -->
-            <div class="col-lg-6 text-center">
-                <h2>Our Location</h2>
-                <p><strong>School Address:</strong></p>
-                <p>622, Yakasai Street, Tal'udu G/Kaya Gwale LGA, Kano State</p>
-                <p><strong>Email:</strong> imamhafsin@gmail.com</p>
-                <p><strong>Phone:</strong> 08030999939939399</p>
+            <div class="col-lg-6 text-center" id="contact-address">
+                <h2 class="text-white bg-primary">Our Location</h2>
+                    <p>No.60 Sani Yakasai Street</p>
+                    <p>Tal'udu G/Kaya, Gwale LGA</p>
+                    <p>Kano State</p>
+                    <p>
+                        <i class="fas fa-envelope"></i> 
+                        <a href="mailto:imamhafsin@gmail.com">imamhafsin@gmail.com</a>
+                      </p>
+                      <p>
+                        <i class="fas fa-phone"></i> 
+                        <a href="tel:08142458654">08142458654</a>
+                      </p>
 
                 <!-- Map Embed -->
                 <div class="map-container">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15697.027116225127!2d8.514878604778054!3d12.003850218089407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x11ae8253dd79c6df%3A0xdef54db26ed2b2b7!2sYakasai%20Rd%2C%20Kano!5e0!3m2!1sen!2sng!4v1698755432123!5m2!1sen!2sng" 
-                        width="100%" 
-                        height="100%" 
-                        style="border:0;" 
-                        allowfullscreen="" 
-                        loading="lazy" 
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15697.027116225127!2d8.4780235!3d11.9885162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x11ae807deb61c9e1%3A0xcc7f73ed72c5b70f!2sDr+Sani+Yakasai+St,+Kofar+Bompai,+Kano!5e0!3m2!1sen!2sng!4v1698755432123"
+            width="100%" 
+            height="100%" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
                 </div>
             </div>
 
             <!-- Contact Form Section -->
             <div class="col-lg-6">
-                <h2>Get in Touch</h2>
+                <h2 class="text-white text-center bg-primary">Get in Touch</h2>
                 <form id="contactForm" method="POST" action="/send-message">
                     <div class="mb-3">
                         <label for="name" class="form-label">Name</label>
