--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
             <!-- Map and Address Section -->
             <div class="col-lg-6 text-center" id="contact-address">
                 <h2 class="text-white bg-primary">Our Location</h2>
-                    <p>No.60 Sani Yakasai Street</p>
+                    <p>No.60 Dr. Sani Yakasai Street</p>
                     <p>Tal'udu G/Kaya, Gwale LGA</p>
                     <p>Kano State</p>
                     <p>
