--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="carousel-item active">
             <img src="students.jfif" class="d-block w-100" alt="School Image 1">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h5 class="text-info">Welcome to Imam Hafsin Model International School</h5>
+                <h5 class="text-white">Welcome to Imam Hafsin Model International School</h5>
                 <p class="text-light bg-transparent px-3 py-2">
                     Imam Hafsin Model International School provides quality education across three distinct sections: Western Education, Islamiyya, and Tahfizz. 
                     With dedicated directors leading each section, our mission is to nurture future leaders through a blend of modern and traditional learning.
