--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="carousel-item active">
             <img src="students.jfif" class="d-block w-100" alt="School Image 1">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h5 class="text-white">Welcome to Imam Hafsin Model International School</h5>
+                <h5 class="text-white bg-info">Welcome to Imam Hafsin Model International School</h5>
                 <p class="text-light bg-transparent px-3 py-2">
                     Imam Hafsin Model International School provides quality education across three distinct sections: Western Education, Islamiyya, and Tahfizz. 
                     With dedicated directors leading each section, our mission is to nurture future leaders through a blend of modern and traditional learning.
@@ -66,7 +66,7 @@
         <div class="carousel-item">
             <img src="students.jfif" class="d-block w-100" alt="Western Education Image">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h5 class="text-info">Western Education Section</h5>
+                <h5 class="text-white bg-info">Western Education Section</h5>
                 <p class="text-light bg-transparent px-3 py-2">
                     Empowering students with modern education and life skills under the guidance of Mr. Muhammad Auwal 
                 </p>
@@ -76,7 +76,7 @@
         <div class="carousel-item">
             <img src="team.jfif" class="d-block w-100" alt="School Image 2">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h5 class="text-info">Islamiyya Section</h5>
+                <h5 class="text-white bg-info">Islamiyya Section</h5>
                 <p class="text-light bg-transparent px-3 py-2">
                     Building a strong foundation in Islamic studies under the guidance of Mal. Usman Said
                 </p>
@@ -86,7 +86,7 @@
         <div class="carousel-item">
             <img src="students.jfif" class="d-block w-100" alt="School Image 3">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h5 class="text-info">Tahfizz Section</h5>
+                <h5 class="text-white bg-info">Tahfizz Section</h5>
                 <p class="text-light bg-transparent px-3 py-2">
                     Focusing on the memorization of the Holy Quran with leadership from Mal. Salihu Hashim
                 </p>
@@ -168,12 +168,13 @@
   <!-- Back to top button -->
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
   
+  
   <!-- Scripts -->
-  <script src="login.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="login.js"></script>
 </body>
   </html>
   
